--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics: 
+    analytics: UA-59069463-1
     verify: 
     ad-client: 
     ad-slot: 
