--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            Middleware Architecture
+title:            API Architecture and Security
 locale:           en_US
 url:              
 
